add enabled preview to running tests