@@ -59,6 +59,7 @@ allprojects {
 
         withType<Test> {
             useJUnitPlatform()
+            jvmArgs = listOf("--enable-preview")
         }
 
         named<JacocoReport>("jacocoTestReport") {
